fix mobile + try fix logo dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,20 @@
 
   @media (max-width: 640px) {
     .svg-margin {
-      margin-left: -30px;
+      margin-left: -25px;
     }
+  }
+
+
+  :root {
+    --primary-color: black;
+    --secondary-color: white;
+  }
+
+  svg .cls-2 {
+    fill: var(--primary-color);
+  }
+
+  svg .cls-5 {
+    fill: var(--secondary-color);
   }
